--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@react-pdf/renderer": "^3.3.8",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.1"
   }
 }
