--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://triveshwasnik.github.io/flashcardgenerator/",
+  "homepage": "https://triveshwasnik.github.io/flashcardgenerator",
   "name": "flashcardgenerator",
   "version": "0.1.0",
   "private": true,
