--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://triveshwasnik.github.io/flashcardgenerator",
   "name": "flashcardgenerator",
   "version": "0.1.0",
   "private": true,
@@ -24,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,7 +45,6 @@
   },
   "devDependencies": {
     "@react-pdf/renderer": "^3.3.8",
-    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.1"
   }
 }
