--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-to-print": "^2.15.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
