--- a/package.json
+++ b/package.json
@@ -3,21 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "formik": "^2.4.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3",
-    "react-scripts": "^3.0.1",
-    "react-to-print": "^2.15.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.3.3"
+    "@testing-library/user-event": "^13.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +32,19 @@
     ]
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.18",
     "@react-pdf/renderer": "^3.3.8",
-    "tailwindcss": "^3.4.1"
+    "@reduxjs/toolkit": "^2.2.1",
+    "formik": "^2.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "^5.0.1",
+    "react-to-print": "^2.15.1",
+    "tailwindcss": "^3.4.1",
+    "web-vitals": "^3.5.2",
+    "yup": "^1.3.3"
   }
 }
